<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".Artikel">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26dp"

        android:text="@string/tvartikel"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvisiartikel"/>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>


    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btnbackactivityone"
        android:onClick="Beranda"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btnbiodata"
        android:onClick="Biodata"/>
</LinearLayout>